# advent-of-code

./: .pre-commit-config.yaml  LICENSE.txt  pyproject.toml
2024/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  pyproject.toml
2025/: .pre-commit-config.yaml  day01.py  pyproject.toml
2025/python/: .pre-commit-config.yaml  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  pyproject.toml
2025/rust/: .pre-commit-config.yaml  Cargo.toml
2025/rust/day01/src/: main.rs
